# stm32f446vetx-dev-module

./: .gitmodules  README.md  index.html  style.css
firmware/: .mxproject  CMakeLists.txt  STM32F446VETx.ioc
firmware/Core/: CMakeLists.txt
firmware/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/CubeMX/: Makefile  STM32F446VETx_FLASH.ld
firmware/Drivers/: CMakeLists.txt
firmware/Lib/: CMakeLists.txt
firmware/Project/: CMakeLists.txt
firmware/Project/Inc/: fatfs_if.h  littlefs_if.h  selftest.h
firmware/Project/Src/: fatfs_if.c  littlefs_if.c  selftest.c
firmware/template/cmake-toolchain/: .mxproject  CMakeLists.txt  STM32F446VETx.ioc  gcc-arm-none-eabi.cmake
firmware/template/cmake-toolchain/Core/Src/: main.c
firmware/template/cmake-toolchain/CubeMX/: Makefile
firmware/template/makefile-toolchain/: .mxproject  Makefile  STM32F446VETx.ioc
firmware/template/makefile-toolchain/Core/Inc/: stm32f4xx_hal_conf.h
firmware/template/makefile-toolchain/Core/Src/: stm32f4xx_hal_msp.c
hardware/: .gitignore
hardware/Casing_3D-print/: README.md  module-case.f3z  module-case_BODY.step  module-case_TOP.step
hardware/Module Casing/: module-case_CASE.step  module-case_TOP.step
hardware/STM32F446VE-Module/: STM32F446VE-Module.kicad_pcb  STM32F446VE-Module.kicad_pro  STM32F446VE-Module.kicad_sch
hardware/STM32F446VE-Module-v1/: README.md  STM32F446VE-Module-v1.kicad_pcb  STM32F446VE-Module-v1.kicad_sch  STM32F446VE-Module.kicad_pro
hardware/STM32F446VE-Module-v1/output/: interactive_bom.html
hardware/STM32F446VE-Module-v2/: README.md  STM32F446VE-Module-v2.kicad_sch  STM32F446VE-Module.kicad_pcb  STM32F446VE-Module.kicad_sch
hardware/STM32F446VE-Module/output/: STM32F446VE-Module-BOM.csv  STM32F446VE-Module-all-pos.csv
