cmake_minimum_required(VERSION 3.12)

project(STM32F446VETx-lib C CXX ASM )

#### PRINTF LIBARY ####
set(PRINTF_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/printf )
set(PRINTF_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/printf )
set(PRINTF_LIB_SOURCE_FILES ${PRINTF_LIB_SOURCE_DIR}/printf.c )

#### LittleFS Library ####
set(LFS_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/littlefs )
set(LFS_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/littlefs )
set(LFS_LIB_SOURCE_FILES 
    ${LFS_LIB_SOURCE_DIR}/lfs_util.c
    ${LFS_LIB_SOURCE_DIR}/lfs.c )

add_library(${PROJECT_NAME} INTERFACE )
target_sources(${PROJECT_NAME} INTERFACE 
    ${PRINTF_LIB_SOURCE_FILES}
    # ${LFS_LIB_SOURCE_FILES} 
    )
target_include_directories(${PROJECT_NAME} INTERFACE 
    ${PRINTF_LIB_INCLUDE_DIR} 
    # ${LFS_LIB_INCLUDE_DIR} 
    )
